# bolt-quadtree

./: Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs  comprehensive_benchmark.rs
benchmarks/: Cargo.toml  README.md
benchmarks/src/: c_quadtree.rs  lib.rs  main.rs  query_only.rs
python/: Cargo.toml  build.rs
python/src/: lib.rs  quadtree.rs
src/: collision_detection.rs  lib.rs  shapes.rs
src/quadtree/: api.rs  collision_pairs.rs  collisions.rs  config.rs  core.rs  maintenance.rs  storage.rs  types.rs
tests/: quadtree_tests.rs  shapes_tests.rs
