[package]
name = "bolt-quadtree"
version = "0.1.1"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/GarlicBreadGamesLabs/bolt-quadtree"
readme = "README.md"
description = "High-performance loose quadtree for 2D collision queries."
keywords = ["quadtree", "spatial", "collision", "gamedev"]
categories = ["game-development", "data-structures", "algorithms"]

[lib]
name = "quadtree"

[dependencies]
fxhash = "0.2"
rand = "0.8.5"
smallvec = "1"

[dev-dependencies]
criterion = "0.4.0"

[features]
query_stats = []

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[workspace]
resolver = "2"
members = [".", "benchmarks"]
